Added a skeleton for actions, state machines and an implementation of dijkstra's algorithm